--- a/lab1/index.html
+++ b/lab1/index.html
@@ -16,7 +16,7 @@
         <li>Cricket</li>
         <li>Movies</li>
         <li>Web series</li>
-        <li>nahi Btao ga.</li>
+        <li>economics</li>
     </ol>
 </body>
 </html>
