--- a/lab1/index.html
+++ b/lab1/index.html
@@ -17,6 +17,7 @@
         <li>Movies</li>
         <li>Web series</li>
         <li>economics</li>
+        <li>Mathematics</li>
     </ol>
 </body>
 </html>
