--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab1/">Lab1</a>
+<a href="lab1/index.html">Lab1</a>
 <br>
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab2/">Lab2</a>
+<a href="lab2/index.html">Lab2</a>
 <br>
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab3">Lab3</a>
+<a href="lab3/index.html">Lab3</a>
 <br>
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab4">Lab4</a>
+<a href="lab4/index.html">Lab4</a>
 <br>
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab5">Lab5</a>
+<a href="lab5/index.html">Lab5</a>
 <br>
-<a href="https://github.com/tanveer3374/wad-labs/tree/main/lab6">Lab6</a>
+<a href="lab6/index.html">Lab6</a>
 <br>
